[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/gui/button.png" type="Texture" id=1]
[ext_resource path="res://scenes/gui/StatIndicator.tscn" type="PackedScene" id=2]
[ext_resource path="res://sources/gui/GameGui.gd" type="Script" id=3]
[ext_resource path="res://scenes/gui/ActionBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://graphics/gui/chat/chatwindow.png" type="Texture" id=5]
[ext_resource path="res://graphics/gui/chat/chattab.png" type="Texture" id=6]
[ext_resource path="res://scenes/gui/DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/gui/ChatTab.tscn" type="PackedScene" id=8]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 0
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="VBoxMain" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxTop" type="HBoxContainer" parent="VBoxMain"]
margin_right = 1260.0
margin_bottom = 85.0
alignment = 1

[node name="StatIndicator" parent="VBoxMain/HBoxTop" instance=ExtResource( 2 )]
margin_right = 417.0

[node name="PanelContainer" type="Control" parent="VBoxMain/HBoxTop"]
margin_left = 421.0
margin_right = 838.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxButtons" type="HBoxContainer" parent="VBoxMain/HBoxTop"]
margin_left = 842.0
margin_right = 1260.0
margin_bottom = 85.0
size_flags_horizontal = 3
alignment = 2

[node name="ButtonStatus" type="TextureButton" parent="VBoxMain/HBoxTop/HBoxButtons"]
margin_left = 314.0
margin_right = 346.0
margin_bottom = 85.0
texture_normal = ExtResource( 1 )
stretch_mode = 4

[node name="ButtonInventory" type="TextureButton" parent="VBoxMain/HBoxTop/HBoxButtons"]
margin_left = 350.0
margin_right = 382.0
margin_bottom = 85.0
texture_normal = ExtResource( 1 )
stretch_mode = 4

[node name="ButtonSettings" type="TextureButton" parent="VBoxMain/HBoxTop/HBoxButtons"]
margin_left = 386.0
margin_right = 418.0
margin_bottom = 85.0
texture_normal = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanelContainer" type="Control" parent="VBoxMain"]
margin_top = 89.0
margin_right = 1260.0
margin_bottom = 657.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionBox" parent="VBoxMain" instance=ExtResource( 4 )]
margin_top = 661.0
margin_right = 1260.0
margin_bottom = 700.0

[node name="Chat" type="NinePatchRect" parent="."]
margin_left = 4.0
margin_top = 298.0
margin_right = 342.0
margin_bottom = 668.0
texture = ExtResource( 5 )
patch_margin_left = 6
patch_margin_top = 32
patch_margin_right = 6
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tab" parent="Chat" instance=ExtResource( 8 )]

[node name="Tab2" type="NinePatchRect" parent="Chat"]
show_behind_parent = true
margin_left = 97.0
margin_top = 1.0
margin_right = 199.0
margin_bottom = 25.0
texture = ExtResource( 6 )
patch_margin_left = 4
patch_margin_top = 11
patch_margin_right = 6
patch_margin_bottom = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 380.0
margin_top = 301.0
margin_right = 685.0
margin_bottom = 659.0
theme = ExtResource( 7 )
tab_align = 0
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Tabs2" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -281.0
margin_bottom = -302.0

[node name="Tabs3" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -281.0
margin_bottom = -302.0
